<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>seleteWidget</class>
 <widget class="QWidget" name="seleteWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>722</width>
    <height>469</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QRadioButton" name="emp_Rbtn">
       <property name="text">
        <string>员工</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QRadioButton" name="att_Rbtn">
       <property name="text">
        <string>考勤</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton">
       <property name="text">
        <string>查询</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTableView" name="tableView"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
